--- a/css/style.css
+++ b/css/style.css
@@ -3,27 +3,31 @@ body{
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    
 }
 
-header {
-    background-color: #333;
+header, footer {
+    background-color: #353232;
     color: #fff;
     padding: 10px 0;
     text-align: center;
 }
 
+main {
+    display: flex;
+    justify-content: space-between;
+    flex-grow: 1;
+    padding: 5%;
+}
+
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+    
 }
 
 h1 {
     margin: 0;
-}
-
-.content {
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
