--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,37 @@ main {
 }
 
 .container {
-    
+    width: 40%;
+    background-color: #353232;
+    color: #f4f4f4;
+    text-align: center;
 }
 
-h1 {
-    margin: 0;
+.sidebar {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.sidebar .caja1{
+    background-color: aqua;
+    padding: 20px;
+    flex: 1;
+    margin-bottom: 20px;
+    justify-content: center;
+
+}
+
+.sidebar .caja-cajon {
+    display: flex;
+    justify-content: space-between;
+}
+
+.sidebar .caja-cajon .caja {
+    border: #f81eed solid 2px;
+    padding: 20px;
+    width: 50%;
+    margin: 0px 20px 0px 20px;
+    background-color: aqua;
 }
