--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
+.mingzat-regular {
+    font-family: "Mingzat", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+
 body{
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -15,6 +21,7 @@ header, footer {
     color: #fff;
     padding: 10px 0;
     text-align: center;
+    text-decoration: underline green;
 }
 
 main {
@@ -69,6 +76,7 @@ main {
     width: 50%;
     margin: 0px 20px 0px  0px;
     color: white;
+    font-family: "Mingzat", sans-serif, ;
 }
 
 .presentacion {
